--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -104,14 +104,11 @@
                     </figure>
                 </div>
                 <section class="form">
-
                     <h4 class="title4">Send us an email with your query to sales@raftingadventures.com, 
                         or complete the form.
                     </h4>
                     <h2 class="title2"> Ready to get in contact?</h2>
-
-                    <!--<form action="data.php" method="post">-->
-                    <section>
+                    <form action="data.php" method="post">-->
                         <div class="data-general">
                             <div>
                                 <label for="name">NAME</label>
@@ -151,8 +148,7 @@
                             <br>
                             <br>
                         </div>
-                    </section>
-                    <!--</form>-->
+                    </form>
                 </section>
             </aside>
         </main>
