--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,13 +36,13 @@
             <section class="company-information">
                 <div>
                     <p></p>
-                    <h2 class="title2">Constact Us</h2>
+                    <h1 class="title1">Constact Us</h1>
                     <h3>Send Us a Message</h3>
                     <h3>Rafting Adventure</h3>
                     <h3>Phone: 999-999-999</h3>
                     <h3>Email: <a href="mailto:">contact_us@raftingadventures.com</a></h3>
                     <div class="customer-service">
-                        <h3>Customer service</h3>
+                        <h2>Customer service</h2>
                         <h5>Sales : You need a personalized package or for a group, call us and we will take care of assisting you, 
                         identifying your requirements, which tour and package best adapt to the experience you want to have and thus enjoy a safe, 
                         pleasant and happy experience.
@@ -75,7 +75,7 @@
             </section>
             <aside>
                 <p></p>                
-                <h2 class="title2">Our Team</h2>
+                <h1 class="title1">Our Team</h1>
 
                 <h4 class="title4"> We have a team of 25 employees, our winning and service culture motivates us to work as a team and
                     with optimism to always provide the best service to the client and 
@@ -144,7 +144,7 @@
                                 <label style="float:left"><input type="checkbox" id="newsletter" >Please subscribe me to the monthly newsletter</label>
                             </div>
                             <br><br>
-                            <a href="#" class="button">Ready! Submit form</a>
+                            <input class="button" type="submit" value="Ready! Submit form">
                             <br>
                             <br>
                         </div>
