--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,13 +36,14 @@
             <section class="company-information">
                 <div>
                     <p></p>
-                    <h1 class="title1">Constact Us</h1>
+                    <h2 class="title2">Constact Us</h2>
                     <h3>Send Us a Message</h3>
                     <h3>Rafting Adventure</h3>
                     <h3>Phone: 999-999-999</h3>
                     <h3>Email: <a href="mailto:">contact_us@raftingadventures.com</a></h3>
                     <div class="customer-service">
-                        <h2>Customer service</h2>
+                        <h2 class="title2">Customer service</h2>
+                        <br>
                         <h5>Sales : You need a personalized package or for a group, call us and we will take care of assisting you, 
                         identifying your requirements, which tour and package best adapt to the experience you want to have and thus enjoy a safe, 
                         pleasant and happy experience.
@@ -65,7 +66,7 @@
                            <iframe 
                                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d288.33177282695624!2d-71.98711826658423!3d-13.516283086560154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1734237081555!5m2!1ses-419!2spe"
                                 width="600"
-                                height="480"
+                                height="510"
                                 style="border:0;"
                                 allowfullscreen>
                             </iframe>
@@ -75,7 +76,7 @@
             </section>
             <aside>
                 <p></p>                
-                <h1 class="title1">Our Team</h1>
+                <h1>Our Team</h1>
 
                 <h4 class="title4"> We have a team of 25 employees, our winning and service culture motivates us to work as a team and
                     with optimism to always provide the best service to the client and 
