--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,7 +19,7 @@
         <header>
             <div class="header-container">
                 <p> </p>
-                <img src="images/logo.png" alt="Company Logo" width="100">
+                <img src="images/logo.webp" alt="Company Logo" width="100">
                 <p> </p>
                 <nav>
                     <ul class="navigation">
@@ -50,18 +50,18 @@
 
             <section class="history">
                     <h2>History</h2>
-                    <div class="history-content">
+                    <div class="history-content2">
                         <p>The unevenness of the rivers causes the boat to slide at high speed over the water, turning rafting into a somewhat risky activity.
                            In fact, there is an international scale to measure the intensity of rapids, 
                            which ranges from I to VI, although tourist routes are usually class I to III and the following are considered for experts.
                            Considering that we like this type of adventure, it is important that you use the safety equipment 
                         </p> 
-                        <img src="images/rafting-history1.webp" alt="History Image" class="history-image">
+                        <img src="images/rafting-history.webp" alt="History Image" class="history-image">
                         <p>provided to you at all times (helmet, vest, in some cases special clothing for cold water, such as a wetsuit).
                            Above all, it is important that you take into account the advice they give you so that, 
                            working as a team, you have a great experience in beautiful natural settings.
                            Start preparing your swimsuit, your sunscreen, your wet shoes, and hold on tight!
-                           Here I'll tell you about some places you can visit in Sacred Valley of the Incas so you can conquer a river at full speed.
+                           Here I'll tell you about some places you can visit in Sacred Valley of the Incas so you can conquer a white water river's at full speed.
                         </p>
                     </div>
             </section>
