--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -20,7 +20,7 @@
         <header>
             <div class="header-container">
                 <p> </p>
-                <img src="images/logo.png" alt="Company Logo" width="100">
+                <img src="images/logo.webp" alt="Company Logo" width="100">
                 <p> </p>
                 <nav>
                     <ul class="navigation">
@@ -84,20 +84,20 @@
                 </h4>          
                 <div class="our-employees">
                     <figure>
-                        <img src="images/sales-employee.jpg" alt="Sales-employee">
+                        <img src="images/sales-employee.webp" alt="Sales-employee">
                         <figcaption>Sales Manager<br>
                                     Cesar Antonio Puértolas, Sales Manager and guide in outdoor adventure sports
                                     with more than 25 years of experience in the field.
                         </figcaption>
                     </figure>
                     <figure>
-                        <img src="images/reservations-employee.jpg" alt="Reservations-employee">
+                        <img src="images/reservations-employee.webp" alt="Reservations-employee">
                         <figcaption>Reservations and Logistics<br>
                                     María Cristina Olivares, has worked in the company for 5 years and in the industry for 15 years.
                         </figcaption>
                     </figure>  
                     <figure>
-                        <img src="images/rafting-conductor.jpg" alt="Rafting-conductor">
+                        <img src="images/rafting-conductor.webp" alt="Rafting-conductor">
                         <figcaption>Rafting-conductor<br>
                                     Vardia Gabriela Durand, is the tour conductor, with more than 8 years in the company,
                                     is a rafting instructor, competitive swimmer, rafting specialist.
@@ -109,7 +109,7 @@
                         or complete the form.
                     </h4>
                     <h2 class="title2"> Ready to get in contact?</h2>
-                    <form action="data.php" method="post">-->
+                    <form action="index.html" method="post">-->
                         <div class="data-general">
                             <div>
                                 <label for="name">NAME</label>
@@ -145,7 +145,7 @@
                                 <label style="float:left"><input type="checkbox" id="newsletter" >Please subscribe me to the monthly newsletter</label>
                             </div>
                             <br><br>
-                            <input class="button" type="submit" value="Ready! Submit form">
+                            <input class="button" type="submit" value="Ready? Submit!">
                             <br>
                             <br>
                         </div>
