--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Rafting Adventure Agency - About Us Page</title>
+        <title> About Us Page- Rafting Adventure Agency -Your ally for fun and travel! </title>
         <meta 
             name="description" 
             content="The About Us page of the Ángel Cornejo rafting site provides information about
@@ -34,8 +34,8 @@
         <main>
 
             <div class="hero">
-                <img src="images/banner1.webp" alt= "Rafting Adventure" width= "1250" height= "620">
-                <h1>Rafting Aventures</h1>
+                <img src="images/banner1.webp" alt= "Rafting Adventure-About us" width= "1250" height= "620">
+                <h1>Nature and Adventure</h1>
                 <article>
                     <img src="images/client.webp" alt="Portrait of a happy client">
                     <h4>If you have an adventurous spirit, enjoy exciting experiences and are someone in search of experiencing adrenaline to the surface,
