--- a/wwr/index.html
+++ b/wwr/index.html
@@ -34,7 +34,7 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images/banner2.webp" alt= "Rafting Adventure" width= "1250" height= "620">
+                <img src="images/banner2.webp" alt= "Rafting Adventure-Home" width= "1250" height= "620">
                 <h1>Rafting Aventures</h1>
                 <article> 
                         <img src="images/art-home1.webp" alt="Portrait of a happy client">
@@ -110,6 +110,7 @@
                         </form>
                     </div>
                 </div>
+                <br>
                 <a href="trips.html" class="button1">More about trips!</a>
             </section>
         </main>
@@ -131,4 +132,4 @@
         </footer>
     </body>
 </html>
-<!-- Last update December 15-->    
+<!-- Last update December 17-->    
