--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -69,12 +69,12 @@
                         </h5>
                         <h5>Phone : 999-999-999/05  Mail to : consulting@raftingadventures.com</h5>
                         <div class="map-responsive">
-                           <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d288.33177282695624!2d-71.98711826658423!3d-13.516283086560154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1734237081555!5m2!1ses-419!2spe"
+                            <h2>Find us in Cusco</h2>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d288.33177282695624!2d-71.98711826658423!3d-13.516283086560154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1734237081555!5m2!1ses-419!2spe"
+                                title="Location Map on Google"
                                 width="600"
                                 height="510"
-                                style="border:0;"
-                                allowfullscreen>
+                                allowfullscreen="">
                             </iframe>
                         </div>
                     </div>    
@@ -144,18 +144,20 @@
                                         <label style="float:left"><input type="radio" id="purpose2" name="purpose1" value="Reservation">Reservation Question</label>
                                         <label style="float:left"><input type="radio" id="purpose3" name="purpose1" value="Suggestion">Web Site Suggestion</label>
                                     </div>
-                                    <div class="message-client">
-                                        <label for="message1" class="message">Write here your message</label> 
-                                        <textarea name="message" cols="36" rows="8" id="message1" class="box-message" required="" ></textarea>
+                                    <div class="comment-client">
+                                        <label for="comment" class="comment">Write here your message</label> 
+                                        <textarea name="comment" cols="36" rows="8" id="comment" class="box-message" required="" ></textarea>
                                     </div>
                                     <br>
-                                    <div class="suscription>">
+                                    <div class="suscription">
                                         <label style="float:left"><input type="checkbox" id="newsletter" >Please subscribe me to the monthly newsletter</label>
                                     </div>
                                     <br><br>
                                     <input class="button" type="submit" value="Ready? Submit!">
                                     <br>
                                     <br>
+                                    
+
                                 </div>
                             </form>
                         </section>
