--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Rafting Adventure Agency - Home Page - Rafting experts!</title>
+        <title> Trips - Rafting Adventure Agency - Your ally for fun and travel!</title>
         <meta 
             name="description" 
             content="The Trips Page of the Angel Cornejo rafting site is the page where you will find
             everything related to trips and tourist packages, places where we do whitewater rafting,
-            the offers we have, the trips we do, links to contacts for our services.>
+            the offers we have, the trips we do, links to contacts for our services.">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
              <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
