--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,7 +71,9 @@
                         <div class="map-responsive">
                             <h2>Find us in Cusco</h2>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d288.33177282695624!2d-71.98711826658423!3d-13.516283086560154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1734237081555!5m2!1ses-419!2spe"
-                                title="Location Map on Google">
+                                title="Location Map on Google"
+                                width="800"
+                                height="710">
                             </iframe>
                         </div>
                     </div>    
