--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -116,7 +116,7 @@
                                 or complete the form.
                             </h4>
                             <h2 class="title3"> Ready to get in contact?</h2>
-                            <form action="index.html" method="post">-->
+                            <form action="index.html" method="post">
                                 <div class="data-general">
                                     <div>
                                         <label for="name">NAME</label>
