--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -72,8 +72,8 @@
                             <h2>Find us in Cusco</h2>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d288.33177282695624!2d-71.98711826658423!3d-13.516283086560154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1734237081555!5m2!1ses-419!2spe"
                                 title="Location Map on Google"
-                                width="800"
-                                height="710">
+                                width="377"
+                                height="335">
                             </iframe>
                         </div>
                     </div>    
@@ -168,6 +168,9 @@
         <footer>
             <div class="footer-container">
                 <h6>©2024 Rafting Adventure - 🐈Ángel Cornejo🐈 Cusco-Perú</h6>
+                <a href="https://app.moqups.com/cDuOGs1J9hxZQe9bOCpaFbjcprmbA6lg/view/page/ae257750b">
+                   <h6>About us</h6> 
+                </a>
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
                         <img src="images/facebook.webp" alt="Facebook">
