wire frame trips

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -208,6 +208,9 @@
         <footer>
             <div class="footer-container">
                 <h6>©2024 Rafting Adventure - 🐈Ángel Cornejo🐈 Cusco-Perú</h6>
+                <a href="https://app.moqups.com/EkboZ0w5wAZUQRU5LDymTYqumrYlyCLY/view/page/ae257750b">
+                   <h6>Wireframe Trips</h6> 
+                 </a>
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
                         <img src="images/facebook.webp" alt="Facebook">
