changes meta title name

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,11 +6,10 @@
         <title>Contact Rafting Adventure Agency /Phone:999-999-999 Mail to:consulting@raftingadventures.com</title>
         <meta 
             name="description" 
-            content="The Ángel Cornejo's Rafting Site Contact Page provides information about of
+            content="The Ángel Cornejo's Rafting Site Contact Page  Phone:999-999-999 Mail to:consulting@raftingadventures.com, provides information about of
              the Rafting Adventure Agency, address, phones, emails, employees, located and others.
              The reference of our employees who endorse our service and work, 
-             as well as a survey form to subscribe to our newsletter
-             Phone:999-999-999 Mail to:consulting@raftingadventures.com">
+             as well as a survey form to subscribe to our newsletter">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
