--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> About Us Page- Rafting Adventure Agency -Your ally for fun and travel! </title>
         <meta 
-            name= "description" 
-            content= “ About Angel Cornejo rafting phone: 999-999-999 trips@raftingadventures.”>
+            name="description" 
+            content= “ About Angel Cornejo rafting site is the page where you will find everything related to us,
+                     trips and tourist packages, places where we do rafting, the offers we have, links to contacts for our services.”>
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
