--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,8 +6,7 @@
         <title> About Us Page- Rafting Adventure Agency -Your ally for fun and travel! </title>
         <meta 
             name="description" 
-            content= “ About Angel Cornejo rafting site is the page where you will find everything related to us,
-                     trips and tourist packages, places where we do rafting, the offers we have, links to contacts for our services.”>
+            content= “About Angel Cornejo rafting site phone 999-999-999 mail to contact@raftingadventures.com">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
