changes meta content

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> About Us Page- Rafting Adventure Agency -Your ally for fun and travel! </title>
         <meta 
-            name="description" 
-            content= “About Angel Cornejo rafting site phone 999-999-999 mail to contact@raftingadventures.com">
+            name="description"
+            content="The Ángel Cornejo's Rafting Site About Page Phone:999-999-999 
+            Mail to:consulting@raftingadventures.com, provides information about of
+            the Rafting Adventure Agency, address, phones, emails, packages, trips,
+            offers, what is the rafting and others">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
