changes for link googlemaps

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -115,7 +115,7 @@
                                 or complete the form.
                             </h4>
                             <h2 class="title3"> Ready to get in contact?</h2>
-                            <form action="index.html" method="post">
+                            <form action="#" method="post">
                                 <div class="data-general">
                                     <div>
                                         <label for="name">NAME</label>
@@ -154,8 +154,6 @@
                                     <input class="button" type="submit" value="Ready? Submit!">
                                     <br>
                                     <br>
-                                    
-
                                 </div>
                             </form>
                         </section>
@@ -167,7 +165,7 @@
         <footer>
             <div class="footer-container">
                 <h6>©2024 Rafting Adventure - 🐈Ángel Cornejo🐈 Cusco-Perú</h6>
-                <a href="https://app.moqups.com/cDuOGs1J9hxZQe9bOCpaFbjcprmbA6lg/view/page/ae257750b">
+                <a href="https://app.moqups.com/cDuOGs1J9hxZQe9bOCpaFbjcprmbA6lg/view/page/ae257750b" alt="Contact Wireframe">
                    <h6>About us</h6> 
                 </a>
                 <nav class="sociallinks">
