--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -208,7 +208,7 @@
         <footer>
             <div class="footer-container">
                 <h6>©2024 Rafting Adventure - 🐈Ángel Cornejo🐈 Cusco-Perú</h6>
-                <a href="https://app.moqups.com/EkboZ0w5wAZUQRU5LDymTYqumrYlyCLY/view/page/ae257750b">
+                <a href="https://app.moqups.com/EkboZ0w5wAZUQRU5LDymTYqumrYlyCLY/view/page/ae257750b" alt="Trips wireframe ">
                    <h6>Wireframe Trips</h6> 
                  </a>
                 <nav class="sociallinks">
