--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,7 +20,7 @@
         <header>
             <div class="header-container">
                 <p> </p>
-                <img src="images/logo.webp" alt="Company Logo" width="100">
+                <img src="images/logo.webp" alt="Company Logo" width="100" height="100">
                 <p> </p>
                 <nav>
                     <ul class="navigation">
