--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -165,7 +165,7 @@
         <footer>
             <div class="footer-container">
                 <h6>©2024 Rafting Adventure - 🐈Ángel Cornejo🐈 Cusco-Perú</h6>
-                <a href="https://app.moqups.com/cDuOGs1J9hxZQe9bOCpaFbjcprmbA6lg/view/page/ae257750b" alt="Contact Wireframe">
+                <a href="https://app.moqups.com/cDuOGs1J9hxZQe9bOCpaFbjcprmbA6lg/view/page/ae257750b">
                    <h6>About us</h6> 
                 </a>
                 <nav class="sociallinks">
