--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <nav>
-        <a href="#">Home</a></li>
-        <a href="wwr/">Rafting WebSite</a></li>
-        <a href="wwr/">Siteplan</a></li>
-        <a href="https://linkedin.com">Linkedin Page</a></li>
-        <a href="https://facebook.com">Facebook Page</a></li>
+        <a href="#">Home</a>
+        <a href="wwr/">Rafting WebSite</a>
+        <a href="wwr/">Siteplan</a>
+        <a href="https://linkedin.com">Linkedin Page</a>
+        <a href="https://facebook.com">Facebook Page</a>
         </nav>
     </header>
     <div class="grid">
